WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113533
PDFPlugin: shouldUsePDFPlugin can't use pdfLayerControllerClass() because it asserts if it's not available
https://bugs.webkit.org/show_bug.cgi?id=113533
Summary
PDFPlugin: shouldUsePDFPlugin can't use pdfLayerControllerClass() because it ...
Tim Horton
Reported
2013-03-28 13:12:57 PDT
<
rdar://problem/13528720
>
Attachments
patch
(2.10 KB, patch)
2013-03-28 13:15 PDT
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2013-03-28 13:15:42 PDT
Created
attachment 195629
[details]
patch
Tim Horton
Comment 2
2013-03-28 13:21:08 PDT
http://trac.webkit.org/changeset/147151
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug