third_party/WebKit/Source/WebKit2/WebProcess/WebPage/WebPage.cpp
@@ -160,7 +160,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #endif
 
 #if PLATFORM(MAC)
-#include "PDFKitImports.h"
 #include "SimplePDFPlugin.h"
 #if ENABLE(PDFKIT_PLUGIN)
 #include "PDFPlugin.h"
@@ -3677,13 +3676,6 @@ void WebPage::setScrollingPerformanceLoggingEnabled(bool enabled)
 
     frameView->setScrollingPerformanceLoggingEnabled(enabled);
 }
-
-#if PLATFORM(MAC)
-bool WebPage::shouldUsePDFPlugin() const
-{
-    return pdfPluginEnabled() && pdfLayerControllerClass();
-}
-#endif
 
 bool WebPage::canPluginHandleResponse(const ResourceResponse& response)
 {
