third_party/WebKit/Source/WebKit2/WebProcess/WebPage/mac/WebPageMac.mm
@@ -110,6 +110,11 @@ void WebPage::platformPreferencesDidChange(const WebPreferencesStore& store)
     }
 }
 
+bool WebPage::shouldUsePDFPlugin() const
+{
+    return pdfPluginEnabled() && classFromPDFKit(@"PDFLayerController");
+}
+
 typedef HashMap<String, String> SelectorNameMap;
 
 // Map selectors into Editor command names.
